# candidate-transformer

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  projection_config.json  projection_minimal.json
docs/: architecture.md  data_dictionary.md
inputs/: ats.json  recruiter.csv  resume.txt
output/: candidate.json  candidate_minimal.json
src/candidate_transformer/: __init__.py  cli.py  confidence.py  config.py  merger.py  pipeline.py  projector.py  schemas.py
src/candidate_transformer/normalizers/: country.py  date.py  name.py  phone.py
src/candidate_transformer/parsers/: csv_parser.py  json_parser.py  pdf_parser.py
src/candidate_transformer/utils/: fuzzy.py  logging.py
src/candidate_transformer/validators/: candidate.py
tests/fixtures/: sample.csv
tests/integration/: test_pipeline.py
tests/unit/: test_confidence_behavior.py  test_csv_parser.py  test_date_transformer.py  test_json_parser_edge_cases.py  test_merge_projection_and_errors.py  test_merger_boost.py  test_merger_edge_cases.py  test_name_transformer.py  test_phone_transformer.py  test_projection_config.py  test_projector_edge_cases.py  test_provenance_complete.py  test_schemas.py  test_utils.py
